[gd_scene load_steps=10 format=2]

[ext_resource path="res://main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://background/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/title.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/normal_text.tres" type="DynamicFont" id=4]
[ext_resource path="res://main_menu/MusicButton.gd" type="Script" id=5]
[ext_resource path="res://main_menu/SoundButton.gd" type="Script" id=6]
[ext_resource path="res://main_button_theme.tres" type="Theme" id=7]
[ext_resource path="res://main_menu/FullscreenButton.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.152941, 0.184314, 0.231373, 1 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]
margin_left = -3.56372
margin_right = -3.56372

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 1072.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Control" parent="VBoxContainer/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 1072.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer/VBoxContainer/MainMenu"]
margin_left = 700.0
margin_top = 4.0
margin_right = 1219.0
margin_bottom = 404.0
grow_horizontal = 0
rect_min_size = Vector2( 100, 400 )
size_flags_horizontal = 4
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "SNAKE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButtons" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MainMenu"]
margin_left = 710.0
margin_top = 408.0
margin_right = 1210.0
margin_bottom = 728.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="Button" parent="VBoxContainer/VBoxContainer/MainMenu/MainButtons"]
margin_right = 500.0
margin_bottom = 90.0
rect_min_size = Vector2( 400, 90 )
theme = ExtResource( 7 )
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomLevel" type="Button" parent="VBoxContainer/VBoxContainer/MainMenu/MainButtons"]
visible = false
margin_top = 115.0
margin_right = 500.0
margin_bottom = 205.0
rect_min_size = Vector2( 400, 90 )
custom_constants/hseparation = 20
custom_fonts/font = ExtResource( 4 )
text = "Load Custom Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer/MainMenu/MainButtons"]
visible = false
margin_top = 115.0
margin_right = 500.0
margin_bottom = 205.0
rect_min_size = Vector2( 400, 90 )
custom_constants/hseparation = 20
custom_fonts/font = ExtResource( 4 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectPanel" type="Panel" parent="VBoxContainer/VBoxContainer/MainMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.5
margin_top = -337.0
margin_right = 216.5
margin_bottom = 337.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/MainMenu/LevelSelectPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -114.5
margin_right = 114.5
margin_bottom = 54.0
theme = ExtResource( 7 )
text = "Select Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="ToolButton" parent="VBoxContainer/VBoxContainer/MainMenu/LevelSelectPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -34.0
margin_bottom = 40.0
theme = ExtResource( 7 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="VBoxContainer/VBoxContainer/MainMenu/LevelSelectPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -276.5
margin_right = 191.0
margin_bottom = 276.5
size_flags_vertical = 3
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="StartButton" type="ToolButton" parent="VBoxContainer/VBoxContainer/MainMenu/LevelSelectPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -197.5
margin_top = -51.0
margin_right = 197.5
theme = ExtResource( 7 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicAttribution" type="Label" parent="VBoxContainer/VBoxContainer/MainMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 22.2725
margin_top = -113.133
margin_right = 452.272
margin_bottom = -65.1329
rect_scale = Vector2( 2, 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Voxel Revolution by Kevin MacLeod
Link: https://incompetech.filmmusic.io/song/7017-voxel-revolution
License: https://filmmusic.io/standard-license"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 1920.0
margin_top = 1076.0
margin_right = 1920.0
margin_bottom = 1076.0
size_flags_horizontal = 8
size_flags_stretch_ratio = 10.37
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 1080.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="FullscreenButton" type="Button" parent="VBoxContainer/Control"]
visible = false
margin_left = 1316.0
margin_top = -74.0
margin_right = 1616.0
margin_bottom = -4.0
rect_min_size = Vector2( 300, 70 )
custom_constants/hseparation = 20
custom_fonts/font = ExtResource( 4 )
text = "Fullscreen"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="Button" parent="VBoxContainer/Control"]
margin_left = 1203.7
margin_top = -74.0
margin_right = 1503.7
margin_bottom = -4.0
rect_min_size = Vector2( 300, 70 )
custom_constants/hseparation = 20
custom_fonts/font = ExtResource( 4 )
text = "Music"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="Button" parent="VBoxContainer/Control"]
margin_left = 1507.7
margin_top = -74.0
margin_right = 1807.7
margin_bottom = -4.0
rect_min_size = Vector2( 300, 70 )
custom_constants/hseparation = 20
custom_fonts/font = ExtResource( 4 )
text = "Sound: On"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="FileDialog" type="FileDialog" parent="PopupLayer"]
margin_left = 407.999
margin_top = 210.944
margin_right = 1523.0
margin_bottom = 889.944
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/UserData/Misc/dev/beatsnake"
current_path = "/UserData/Misc/dev/beatsnake/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/VBoxContainer/MainMenu/MainButtons/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MainMenu/MainButtons/CustomLevel" to="." method="_on_CustomLevel_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MainMenu/MainButtons/Quit" to="." method="_on_QuitButton_pressed"]
[connection signal="toggled" from="VBoxContainer/VBoxContainer/MainMenu/MainButtons/Quit" to="VBoxContainer/Control/MusicButton" method="_on_Quit_toggled"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MainMenu/LevelSelectPanel/CloseButton" to="." method="_on_ItemList_close_pressed"]
[connection signal="item_selected" from="VBoxContainer/VBoxContainer/MainMenu/LevelSelectPanel/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/MainMenu/LevelSelectPanel/StartButton" to="." method="_on_ItemList_start_pressed"]
[connection signal="file_selected" from="PopupLayer/FileDialog" to="." method="_on_FileDialog_file_selected"]
